0.1659
    - added select() all_column option
0.1658
    - added EXPERIMENTAL DBIx::Custom::Model column() prefix option.
    - fixed select_at join column invalid bug
    - added DBIx::Custom::Model column() attribute 
0.1657
    - remaned EXPERIMENTAL safty_charcter to safty_name
    - safty_charcter is changed, set only one character regex.
0.1656
    - fixed some select() join opition bug
0.1655
    - added EXPERIMENTAL DBIx::Custom::Model join attribute
    - added EXPERIMENTAL select() join option
    - deprecated select() relation option
    - added EXPERIMENTAL update_param and insert_param
    - remove EXPERIMENTAL DBIx::Custom::Model relation
0.1654
    - selection can contain where clause.
0.1653
    - added EXPERIMENTAL DBIx::Custom::Result remove_filter()
    - added EXPERIMENTAL DBIx::Custom::Result remove_end_filter()
    - added EXPERIMENTAL DBIx::Custom::Model insert_at()
    - added EXPERIMENTAL insert_at()
    - improved error message
0.1652
    - all filter can receive array reference and receiving hash reference is DEPRECATED!
0.1651
    - add EXPERIMENTAL DBIx::Custom::Model filter attribute.
0.1650
    - add EXPERIMENTAL DBIx::Custom::Model name() attribute
0.1649
    - add EXPERIMENTAL DBIx::Custom::Model column_clause() method.
    - select method column option can receive string.
    - DBIx::Custom::Model select() and select_at() think about relation attirbute
0.1648
    - add EXPERIMENTAL DBIx::Custom::Model relation() attribute
    - add EXPERIMENTAL update_at(), delete_at(), select_at()
    - add EXPERIMENTAL setup_model()
    - add EXPERIMENTAL DBIx::Custom::Model columns attirbute
    - add EXPERIMENTAL DBIx::Custom::Model foreign_key() attribute 
    - add EXPERIMENTAL models() attribute
0.1647
    - add default_dbi_option()
0.1646
    - add feture. all model class in namespace is included by include_model
    - rename EXPERIMENTAL include_table to include_model
    - rename EXPERIMENTAL table to model