@@ -363,20 +363,6 @@ Following SQL is executed.
 C<appned> is also used at C<insert()>, C<update()>, C<update_all()>
 C<delete()>, C<delete_all()>, and C<select()>.
 
-Instead of C<column> and C<table>,
-you can use C<selection>.
-This is used to specify column names and table names at once
-
-    my $selection = <<"EOS";
-    title, author, company_name
-    from book inner join company on book.company_id = company.id
-    EOS
-
-    $dbi->select(selection => $selection);
-
-Note that you can't use where clause in C<selection>.
-use clause like "inner join".
-
 =head3 C<execute()>
 
 use C<execute()> to execute SQL
